# android_h264nativedecoder

app/: build.gradle
app/src/androidTest/java/com/testapp/h264nativedecoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  looper.cpp  looper.h  native_codec.cpp
app/src/main/java/com/testapp/h264nativedecoder/: MainActivity.java  VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/testapp/h264nativedecoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
